# rest-framework

./: .env  .gitignore  Dockerfile  docker-compose.yml  manage.py  nginx.conf  package-lock.json  pyproject.toml  requirements.txt  setup.cfg
apps/auth/: serializers.py  urls.py  views.py
apps/cars/: models.py  serializers.py  urls.py  views.py
apps/cars/migrations/: 0001_initial.py  (+2 more)
apps/emails/: urls.py  views.py
apps/my_cars/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/parks/: apps.py  models.py  serializers.py  urls.py  views.py
apps/test_email/: urls.py  views.py
apps/users/: choices.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/: manage.py
backend/configs/: __init__.py  asgi.py  celery.py  routing.py  settings.py  urls.py
backend/core/: models.py
backend/templates/: base.html  recover_password.html  test.html
backend/test_email/: apps.py
client/: asset-manifest.json  index.html
configs/: settings.py  urls.py
configs/additional_configs/: jwt_config.py  rest_config.py
configs/extra_configs/: jwt_configs.py
core/: models.py  pagination.py  permissions.py
core/dataclasses/: user_dataclass.py
core/emun/: enum_Regexp.py
core/emuns/: action_token_enum.py
core/enum/: enum_regexp.py
core/enums/: jwt_enum.py
core/services/: email_service.py  jwt_service.py
frontend/: .eslintrc.js  .eslintrc.json  index.html  package-lock.json  package.json
frontend/src/: index.js
mysql/: ca.pem  client-cert.pem  public_key.pem  server-cert.pem
templates/: register.html  test_email.html
(+67 files in other folders)
