[tool.poetry]
name = "rest-framework"
version = "0.1.0"
description = ""
authors = ["regvud <silveron.regvud@gmail.com>"]
readme = "README.md"
packages = [{include = "rest_framework"}]

[tool.poetry.dependencies]
python = "^3.11"
mysqlclient = "^2.2.0"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
