[tool.poetry]
name = "rest-framework"
version = "0.1.0"
description = ""
authors = ["regvud <silveron.regvud@gmail.com>"]
readme = "README.md"
packages = [{include = "rest_framework"}]

[tool.poetry.dependencies]
python = "^3.11"
mysqlclient = "^2.2.0"
django-dotenv = "^1.4.2"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
celery = "^5.3.4"
redis = "^5.0.1"
channels-redis = "^4.1.0"
pillow = "^10.1.0"
django-celery-results = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
